Created a Zip.targets that is a different strategy than Sfx.targets for packaging (Sfx.targets is for deployables; Zip.targets for libraries).  Refactored commonalities into a Package.targets "superclass"

--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -73,6 +73,10 @@
       <Link>scripts\MasterWorkflow.targets</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="..\scripts\Package.targets">
+      <Link>scripts\Package.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="..\scripts\Sfx.targets">
       <Link>scripts\Sfx.targets</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
