Adding IsInContinuousIntegration property, the idea being that publishing would happen when that property is true.

--- a/scripts/MasterWorkflow.targets
+++ b/scripts/MasterWorkflow.targets
@@ -10,9 +10,7 @@
       Package;
       Deploy;
       FunctionalTest;
-      $(PostBuildTargets)">
-    <OnError ExecuteTargets="$(PostBuildTargets)" />
-  </Target>
+      $(PostBuildTargets)" />
 
   <Target Name="Clean" DependsOnTargets="$(PreCleanTargets)">
     <CallTarget Targets="$(CleanTargets);$(PostCleanTargets)" />
