Removed CMTask superclass - it didn't add enough benefit.  Spiking out PublishToSvn task.

--- a/CM.MSBuild.Tasks/CM.MSBuild.Tasks.csproj
+++ b/CM.MSBuild.Tasks/CM.MSBuild.Tasks.csproj
@@ -48,9 +48,10 @@
   <ItemGroup>
     <Compile Include="CopyToPhysicalDirectory.cs" />
     <Compile Include="Merge.cs" />
+    <Compile Include="PublishToSvn.cs" />
     <Compile Include="NetworkDirectory.cs" />
-    <Compile Include="CMTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvnGateway.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CM.MSBuild.Tasks">
