--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Deploy.UI\FileSystemTest.cs" />
     <Compile Include="Deploy.UI\ProcessRunnerTest.cs" />
     <Compile Include="MSBuild.Tasks\MergeTest.cs" />
+    <Compile Include="MSBuild.Tasks\SvnGatewayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\SfxTest.cs" />
     <Compile Include="Using.cs" />
