--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="MSBuild.Tasks\SvnGatewayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\SfxTest.cs" />
+    <Compile Include="TestLogger.cs" />
     <Compile Include="Using.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +122,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CM.Common\CM.Common.csproj">
+      <Project>{6E8E07C5-DD72-43B1-AC58-20D9896C481B}</Project>
+      <Name>CM.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CM.Deploy.UI\CM.Deploy.UI.csproj">
       <Project>{CDF8201C-74CD-4DA3-8BD5-B8EDCCA5D124}</Project>
       <Name>CM.Deploy.UI</Name>
