--- a/CM.Deploy.UI/CM.Deploy.UI.csproj
+++ b/CM.Deploy.UI/CM.Deploy.UI.csproj
@@ -85,9 +85,7 @@
     <Compile Include="DeployLog.xaml.cs">
       <DependentUpon>DeployLog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FileSystem.cs" />
     <Compile Include="IDeployView.cs" />
-    <Compile Include="ProcessRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -110,6 +108,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CM.Common\CM.Common.csproj">
+      <Project>{6E8E07C5-DD72-43B1-AC58-20D9896C481B}</Project>
+      <Name>CM.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
