--- a/CM.UnitTests/CM.UnitTests.csproj
+++ b/CM.UnitTests/CM.UnitTests.csproj
@@ -49,6 +49,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CM.Common\CM.Common.csproj">
+      <Project>{6E8E07C5-DD72-43B1-AC58-20D9896C481B}</Project>
+      <Name>CM.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CM.Deploy.UI\CM.Deploy.UI.csproj">
       <Project>{CDF8201C-74CD-4DA3-8BD5-B8EDCCA5D124}</Project>
       <Name>CM.Deploy.UI</Name>
