Finished moving files to the common project.  Recreated the intermittent build failure - it was caused by svnadmin failing, but it printed nothing to stdout or stderr.  I increased the timeout.  Also added previously overlooked tests for NetworkDirectory.

--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -45,9 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\FileSystemTest.cs" />
+    <Compile Include="Common\MergeTest.cs" />
+    <Compile Include="Common\NetworkDirectoryTest.cs" />
     <Compile Include="Common\ProcessRunnerTest.cs" />
-    <Compile Include="MSBuild.Tasks\MergeTest.cs" />
-    <Compile Include="MSBuild.Tasks\SvnGatewayTest.cs" />
+    <Compile Include="Common\SvnGatewayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\SfxTest.cs" />
     <Compile Include="TestLogger.cs" />
