--- a/CM.UnitTests/CM.UnitTests.csproj
+++ b/CM.UnitTests/CM.UnitTests.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\NetworkDirectoryTest.cs" />
     <Compile Include="Deploy.UI\DeployFormPresenterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
