--- a/CM.Common/CM.Common.csproj
+++ b/CM.Common/CM.Common.csproj
@@ -49,8 +49,11 @@
   <ItemGroup>
     <Compile Include="FileSystem.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="Merge.cs" />
+    <Compile Include="NetworkDirectory.cs" />
     <Compile Include="ProcessRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvnGateway.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
