--- a/scripts/TeamCity.targets
+++ b/scripts/TeamCity.targets
@@ -28,7 +28,7 @@
     <CreateProperty Value="$(ProjectName).FunctionalTests" Condition="$(FunctionalTestProject) == '' And Exists('$(MSBuildProjectDirectory)\$(ProjectName).FunctionalTests')">
       <Output TaskParameter="Value" PropertyName="FunctionalTestProject" />
     </CreateProperty>
-    <CreateProperty Value="$(ProjectName)-$(Version)" Condition="$(PackageName) == '' Or $(PackageName) == '$(ProjectName).teamcity.patch-$(Version)'">
+    <CreateProperty Value="$(ProjectName)-$(Version)" Condition="$(PackageName) == '' Or $(PackageName) == '$(MSBuildProjectName)-$(Version)'">
       <Output TaskParameter="Value" PropertyName="PackageName" />
     </CreateProperty>
   </Target>
