Tried (and failed) adding a GitGateway for publishing - the few tests I have run in the IDE but not the command line.  I removed the tests from the run until I can figure it out, but in troubleshooting, I changed the NUnit tasks to run in the tests directory, to further enforce consistency between the IDE and command line.

--- a/CM.Common/CM.Common.csproj
+++ b/CM.Common/CM.Common.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileSystem.cs" />
+    <Compile Include="GitGateway.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="ISourceControlGateway.cs" />
     <Compile Include="Merge.cs" />
