--- a/scripts/DotNet.targets
+++ b/scripts/DotNet.targets
@@ -66,6 +66,7 @@
       Condition="$(UnitTestProject) != '' And !Exists('$(NUnitDirectory)')" />
     <NUnit Assemblies="$(MSBuildProjectDirectory)\$(UnitTestProject)\bin\$(Configuration)\$(UnitTestProject).dll"
       ToolPath="$(NUnitDirectory)"
+      WorkingDirectory="$(MSBuildProjectDirectory)\$(UnitTestProject)\bin\$(Configuration)"
       Condition="$(UnitTestProject) != ''" />
   </Target>
 
@@ -74,6 +75,7 @@
       Condition="$(FunctionalTestProject) != '' And !Exists('$(NUnitDirectory)')" />
     <NUnit Assemblies="$(MSBuildProjectDirectory)\$(FunctionalTestProject)\bin\$(Configuration)\$(FunctionalTestProject).dll"
       ToolPath="$(NUnitDirectory)"
+      WorkingDirectory="$(MSBuildProjectDirectory)\$(FunctionalTestProject)\bin\$(Configuration)"
       Condition="$(FunctionalTestProject) != ''" />
   </Target>
 
