--- a/scripts/Default.targets
+++ b/scripts/Default.targets
@@ -2,6 +2,8 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Environment Condition="$(Environment) == ''">dev</Environment>
+    <EnvironmentsDirectory Condition="$(EnvironmentsDirectory) == ''">$(MSBuildProjectDirectory)\environments</EnvironmentsDirectory>
+    <ConfigPath Condition="$(ConfigPath) == ''">$(EnvironmetsDirectory)\$(Environment).properties</ConfigPath>
     <BuildDirectory Condition="$(BuildDirectory) == ''">$(MSBuildProjectDirectory)\build</BuildDirectory>
     <Version Condition="$(Version) == ''">0.0.0.0</Version>
     <CMDirectory Condition="$(CMDirectory) == ''">$(MSBuildProjectDirectory)\Dependencies\CM.NET</CMDirectory>
@@ -16,6 +18,7 @@
     <TraceDataTargets>$(TraceDataTargets);TraceDefaultData</TraceDataTargets>
   </PropertyGroup>
 
+  <Import Project="$(ConfigPath)" Condition="Exists('$(ConfigPath)')" />
   <Import Project="$(CMDirectory)\MasterWorkflow.targets" />
   <Import Project="$(CMDirectory)\DotNet.targets" />
 
