--- a/scripts/Default.targets
+++ b/scripts/Default.targets
@@ -43,6 +43,9 @@
 
   <Target Name="TraceDefaultData">
     <Message Text="Default.targets" />
+    <Message Text="  Environment: $(Environment)" />
+    <Message Text="  EnvironmentsDirectory: $(EnvironmentsDirectory)" />
+    <Message Text="  ConfigPath: $(ConfigPath)" />
     <Message Text="  BuildDirectory: $(BuildDirectory)" />
     <Message Text="  Version: $(Version)" />
     <Message Text="  CMDirectory: $(CMDirectory)" />
