--- a/scripts/Sfx.targets
+++ b/scripts/Sfx.targets
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <DeployExe Condition="@(DeployExe) == ''" Include="$(MSBuildProjectDirectory)\Dependencies\CM.NET\deployer.exe" />
+    <DeployExe Condition="@(DeployExe) == ''" Include="$(CMDirectory)\deployer.exe;$(CMDirectory)\CM.Common.dll" />
   </ItemGroup>
   
   <PropertyGroup>
