Fixed packaging ugliness - CM.NET will copy the CM files to the package directory, but nothing else (no more filling the PackageFiles ItemGroup and letting CM.NET struggle to figure out where to put them).  Added an MSBuild task to solve an ItemGroup transform that I don't think you can do with the built in transform mechanism -- needed for packaging files without requiring users to enter relative paths.  Removed all CreateItem and CreateProperty tasks - those are deprecated in MSBuild 3.5 since targets can now contain PropertyGroups and ItemGroups.  Removed unnecessary dependencies in MasterWorkflow.

--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Common\ProcessRunnerTest.cs" />
     <Compile Include="Common\PublishToSvnTest.cs" />
     <Compile Include="Common\SvnGatewayTest.cs" />
+    <Compile Include="MSBuild.Tasks\ChangeDirectoryPrefixTest.cs" />
     <Compile Include="MSBuild.Tasks\CopyToPhysicalDirectoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\SfxTest.cs" />
