--- a/CM.MSBuild.Tasks/CM.MSBuild.Tasks.csproj
+++ b/CM.MSBuild.Tasks/CM.MSBuild.Tasks.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeDirectoryPrefix.cs" />
     <Compile Include="CopyToPhysicalDirectory.cs" />
     <Compile Include="MSBuildLogAdapter.cs" />
     <Compile Include="PublishToSvn.cs" />
